#!/bin/bash
## MCMCLib config script

function print_help
{
    echo "" ;
    echo -e "\x1B[32mMCMCLib Tests configure options:\033[0m" >&2 ;
    echo "-c    Coverage build" ;
    echo "-d    Development build" ;
    echo "-g    Debugging build (optimization flags set to -O0 -g)" ;
    echo "-h    Print help" ;
    echo "-i    MCMCLib install path (default: build directory)" ;
    echo "        Example: /usr/local" ;
    echo "-m    Specify the BLAS and Lapack libraries to link against" ; 
    echo "        Examples: -m \"-lopenblas\" or -m \"-framework Accelerate\"" ;
    echo "-o    Compiler optimization options; defaults to:" ;
    echo "        -O3 -march=native -ffp-contract=fast -DARMA_NO_DEBUG" ;
    echo "" ;
}

while getopts hcdgi:m:o:p option; do
    case "${option}" in
        h) print_help; exit 2;;
        c) MCMC_COVERAGE_BUILD="y";;
        d) MCMC_BUILD="dev";;
        g) MCMC_DEBUG_BUILD="y";;
        i) MCMC_INSTALL_PATH=${OPTARG};;
        m) MCMC_MATRIX_OPS=${OPTARG};;
        o) MCMC_OPT=${OPTARG};;
        ?) print_help; exit 2;;
    esac
done

if [ -z ${CXX+x} ]; then 
    CXX=g++
fi

#

echo ""
echo -e "\x1B[32mMCMCLib Test Configuration...\033[0m" >&2 ;
echo ""

# compiler checks

IS_DARWIN=$($CXX -dumpmachine 2>&1 | grep -i -c "darwin")
GCC_COMPILER=$($CXX --version 2>&1 | grep -i -c -E "gcc")
APPLE_COMPILER=$($CXX --version 2>&1 | grep -i -c -E 'apple llvm')

# get working directory
WDIR=${PWD}

# look for Armadillo
if [ -z ${ARMA_INCLUDE_PATH+x} ]; then 
    
    declare -a ARMA_DIRS=("${WDIR}/../../include" "/usr/include" "/usr/local/include" "/opt/include" "/opt/local/include")
    ARMA_INCLUDE_PATH=

    for i in "${ARMA_DIRS[@]}"; do
        if [ -f "$i"/armadillo ]; then 
            ARMA_INCLUDE_PATH="$i"
            break
        fi
    done

    if [[ $ARMA_INCLUDE_PATH == "" ]]; then
        echo "MCMC tests: cannot find the armadillo library."
        echo ""
        exit 1
    fi
fi

# set build and optimization flags

if [[ "${MCMC_COVERAGE_BUILD}" == "y" ]]; then 
    MCMC_OPT_FLAGS="-g -O0 --coverage -fno-inline -fno-inline-small-functions -fno-default-inline"
else
    if [[ "${MCMC_OPT}" == "" ]]; then
        MCMC_OPT_FLAGS="-O3 -march=native -ffp-contract=fast -DARMA_NO_DEBUG"
    else
        MCMC_OPT_FLAGS="${MCMC_OPT}"
    fi

    if [[ "${MCMC_PARALLEL}" == "y" ]]; then
        MCMC_OPT_FLAGS="${MCMC_OPT_FLAGS} -fopenmp"
    fi
fi

MCMC_WARN_FLAGS="-Wall"

# shared library name and install path

MCMC_SHLIB_NAME="mcmc"

#

if [[ "${MCMC_INSTALL_PATH}" == "" ]]; then
    cd ../..
    MCMC_INSTALL_PATH=${PWD}
    MCMC_INSTALL_INCLUDE_PATH=${PWD}/include
    MCMC_INSTALL_LIB_PATH=${PWD}
    cd ${WDIR}
else
    MCMC_INSTALL_INCLUDE_PATH="${MCMC_INSTALL_PATH}/include"
    MCMC_INSTALL_LIB_PATH="${MCMC_INSTALL_PATH}/lib"
fi

# BLAS and LAPACK settings

if [[ !(-z ${MCMC_MATRIX_OPS+x}) ]]; then
    MCMC_BLAS_LAPACK="${MCMC_MATRIX_OPS}"
else
    if [[ $OSTYPE == darwin* ]] ; then
        MCMC_BLAS_LAPACK="-framework Accelerate"
    else
        MCMC_BLAS_LAPACK="-lblas -llapack"
    fi
fi

# final optimization checks

if [[ "${MCMC_DEBUG_BUILD}" == "y" ]]; then
    MCMC_OPT_FLAGS="-O0 -g"
fi

if [ "$IS_DARWIN" -eq "1" ] && [ "$GCC_COMPILER" -eq "1" ]; then
    MCMC_OPT_FLAGS="-Wa,-q ${MCMC_OPT_FLAGS}"
fi

#
# final print:

echo "  - OS:            ${OSTYPE}"
echo "  - C++ compiler:  ${CXX}"

if [[ "${MCMC_BUILD}" == "dev" ]]; then
    echo "  - Build version: development"
elif [[ "${MCMC_COVERAGE_BUILD}" == "y" ]]; then
    echo "  - Build version: coverage"
elif [[ "${MCMC_DEBUG_BUILD}" == "y" ]]; then
    echo "  - Build version: debug"
else
    echo "  - Build version: release"
fi

echo ""

echo "  - ARMA_INCLUDE_PATH set to:"
echo "    ${ARMA_INCLUDE_PATH}"
echo "  - BLAS and Lapack libraries set to:"
echo "    ${MCMC_BLAS_LAPACK}"

echo ""

echo "  - optimization flags:"
echo "    ${MCMC_OPT_FLAGS}"

echo ""

echo "  - MCMCLib install path:"
echo "    ${MCMC_INSTALL_PATH}"

echo ""
echo "  - Additional notes:"

if [ "$APPLE_COMPILER" -eq "1" ] && [[ "${MCMC_PARALLEL}" == "y" ]]; then
    echo -e "    \x1B[31m- You have enabled OpenMP, but your C++ compiler does not\033[0m" >&2 ;
    echo -e "    \x1B[31m  support this feature!\033[0m" >&2 ;
fi

if [ "$IS_DARWIN" -eq "1" ] && [ "$GCC_COMPILER" -eq "1" ]; then
    echo "    - To enable AVX features, your compiler will use the Apple LLVM"
    echo "      assembler"
fi

echo ""
echo -e "\x1B[32mConfiguration completed. Creating Makefile... \c\033[0m" >&2 ;

sed -e "s|@CXX@|${CXX}|" \
    -e "s|@ARMA_INCLUDE_PATH@|${ARMA_INCLUDE_PATH}|" \
    -e "s|@MCMC_BLAS_LAPACK@|${MCMC_BLAS_LAPACK}|" \
    -e "s|@MCMC_WARN_FLAGS@|${MCMC_WARN_FLAGS}|" \
    -e "s|@MCMC_OPT_FLAGS@|${MCMC_OPT_FLAGS}|" \
    -e "s|@MCMC_SHLIB_NAME@|${MCMC_SHLIB_NAME}|" \
    -e "s|@MCMC_INCLUDE_PATH@|${MCMC_INSTALL_INCLUDE_PATH}|" \
    -e "s|@MCMC_INSTALL_PATH@|${MCMC_INSTALL_LIB_PATH}|" \
    Makefile.in > Makefile

echo -e "\x1B[32mdone.\033[0m" >&2 ;
echo ""
